test/1.4/errors/T_ESYNTAX_time_unit.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method m() {
    // no error
    after 1 s: m();
    // no error
    after 1 cycles: m();
    /// ERROR ESYNTAX
    after 1 invalid: m();
}
